--- a/TASK 8.ipynb
+++ b/TASK 8.ipynb
@@ -91,9 +91,9 @@
         "b=np.random.rand(4,4)\n",
         "c=np.reshape(a,(2,8))\n",
         "d=np.reshape(b,(2,8))\n",
-        "print(np.vstack(c))\n",
+        "print(np.vstack((c,d)))\n",
         "print()\n",
-        "print(np.hstack(d))"
+        "print(np.hstack((c,d)))"
       ],
       "execution_count": 10,
       "outputs": [
