--- a/TASK 8.ipynb
+++ b/TASK 8.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "name": "TASK 8.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -19,16 +18,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/ninjahurricane007/Learn.py/blob/main/TASK%208.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "slsGswYbJSo7"
       },
       "source": [
@@ -39,7 +28,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "GGRQSYyNJW9t",
-        "outputId": "416e0f40-3420-46ff-c523-47ff3f7678af",
+        "outputId": "ba6429b5-76a6-4fbd-a527-cd6e4ff6ed55",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -49,14 +38,14 @@
         "import numpy as np\n",
         "print(np.random.rand(3,3))"
       ],
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[[0.19089337 0.17209699 0.65042646]\n",
-            " [0.10525723 0.26735379 0.62418098]\n",
-            " [0.40330698 0.9528592  0.60284937]]\n"
+            "[[0.66022844 0.17046783 0.79398627]\n",
+            " [0.42662366 0.67138109 0.91129733]\n",
+            " [0.60255276 0.58422189 0.78304543]]\n"
           ],
           "name": "stdout"
         }
@@ -79,7 +68,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "VoIqYeNWJ4H_",
-        "outputId": "91925dde-10b9-4603-f667-646528818d32",
+        "outputId": "9e4c75b6-343b-4d47-9d3e-dc7cd4f7d308",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -95,26 +84,26 @@
         "print()\n",
         "print(np.hstack((c,d)))"
       ],
-      "execution_count": 10,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[[0.60930978 0.29723428 0.01530261 0.10270875 0.68139425 0.97644278\n",
-            "  0.30933529 0.56697771]\n",
-            " [0.43319107 0.15526615 0.24000042 0.98463231 0.32463007 0.65237307\n",
-            "  0.66934185 0.38586567]\n",
-            " [0.89449603 0.03772116 0.42168273 0.93175231 0.09518575 0.59070576\n",
-            "  0.63736044 0.68232723]\n",
-            " [0.17299238 0.95480594 0.87537703 0.0821925  0.40284912 0.14308143\n",
-            "  0.92667821 0.11455245]]\n"
+            "[[0.88296699 0.65133213 0.74443187 0.05316849 0.31516231 0.56292544\n",
+            "  0.59476785 0.18868536]\n",
+            " [0.54701793 0.36895102 0.32104767 0.36188391 0.63617151 0.56966721\n",
+            "  0.80477903 0.71757803]\n",
+            " [0.06875733 0.96753354 0.23119232 0.82029752 0.07875969 0.92100128\n",
+            "  0.29691171 0.92815486]\n",
+            " [0.31634368 0.71587885 0.13798137 0.20367796 0.56517152 0.12057347\n",
+            "  0.54587045 0.93257691]]\n",
             "\n",
-            "[[0.60930978 0.29723428 0.01530261 0.10270875 0.68139425 0.97644278\n",
-            "  0.30933529 0.56697771 0.89449603 0.03772116 0.42168273 0.93175231\n",
-            "  0.09518575 0.59070576 0.63736044 0.68232723]\n"
-            " [0.43319107 0.15526615 0.24000042 0.98463231 0.32463007 0.65237307\n",
-            "  0.66934185 0.38586567 0.17299238 0.95480594 0.87537703 0.0821925\n",
-            "  0.40284912 0.14308143 0.92667821 0.11455245]]\n"
+            "[[0.88296699 0.65133213 0.74443187 0.05316849 0.31516231 0.56292544\n",
+            "  0.59476785 0.18868536 0.06875733 0.96753354 0.23119232 0.82029752\n",
+            "  0.07875969 0.92100128 0.29691171 0.92815486]\n",
+            " [0.54701793 0.36895102 0.32104767 0.36188391 0.63617151 0.56966721\n",
+            "  0.80477903 0.71757803 0.31634368 0.71587885 0.13798137 0.20367796\n",
+            "  0.56517152 0.12057347 0.54587045 0.93257691]]\n"
           ],
           "name": "stdout"
         }
